# GPUMgr

./: CMakeLists.txt  makefile  package.xml  readme.md
inc/: gpu_mgr_node.hpp  gpu_operation.hpp  gpu_utils.hpp  mini.cuh  mini_type.hpp  primary.hpp  pub_notimer_int32_node.hpp  pub_timer_int32_node.hpp  pub_timer_usage_node.hpp  simple_node.hpp
inc/gpu_mgr/: gpu_mgr.cuh  gpu_mgr.hpp
inc/quick_test/: test_gpu_mgr.hpp  test_gpu_mgr_node.hpp  test_gpu_operation.hpp  test_simple_node.hpp
src/: main.cpp  test.cpp  usage.cpp
src/cuda/: gpu_mgr.cu  mini.cu  util.cu
